[package]
name = "merlin"
version = "1.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
hashbrown = "0.13.2"
itertools = "0.10.5"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
trc = "0.1.1"
unicode-segmentation = "1.10.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
